small tweaks to formatting

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -14,5 +14,6 @@ en:
   auth:
     login_with_email: Login with Email
     register_with_email: Register with Email
+    with_github: Login with Github
     with_facebook: Login with Facebook
     with_twitter: Login with Twitter
